<resources>
    <string name="app_name">Walk_in_Clinic</string>
    <!-- Strings related to login -->
    <string name="prompt_username">username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>
    <string name="sign_up"><u>"Don't Have an account? Click here"</u></string>
    <string name="email_address">Email Address</string>
    <string name="new_username">New Username</string>
    <string name="new_password">New Password</string>
    <string name="account_registration">Account Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="employee">Employee</string>
    <string name="patient">Patient</string>
    <integer name="employee_id">012345</integer>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="employee_id">Employee ID # (hint: ID is 12345)</string>
    <string name="profile">USER MENU</string>
    <string name="Login">Login</string>
    <string name="register_success_message">Success! Your Account is now registered. Click login to sign into your account.</string>
    <string name="signin_admin_message">You are logged in as "Admin"</string>
    <string name="signin_employee_message">You are logged in as "Employee"</string>
    <string name="signin_patient_message">You are logged in as "Patient"</string>
    <string name="Logout">Logout</string>
    <string name="manage_service">Manage Services</string>
    <string name="services_header">MANAGE SERVICES</string>
    <string name="service_name">Service Name</string>
    <string name="offered_by">Offered By:</string>
    <string name="staff">Staff</string>
    <string name="nurse">Nurse</string>
    <string name="doctor">Doctor</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">delete</string>
    <string name="manage_users">Manage Users</string>
    <string name="username_requirement">NOTE: All fields are required only when adding an account, otherwise only the username is required</string>
    <string name="service_name_requirement">NOTE: All fields are required only when adding a service, otherwise only the service name is required</string>
    <string name="new_email_address">New Email Address</string>
    <string name="pick_new_role">Pick new role:</string>
    <string name="view_services">View Services</string>
    <string name="view_users">View Users</string>
    <string name="user_list">User List</string>
    <string name="services_list">Services List</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="manage_calender_employee">Manage Calender</string>
    <string name="view_profile_employee">View Profile</string>
    <string name="profile_view_employee">PROFILE VIEW</string>
    <string name="address_employee">ADDRESS:</string>
    <string name="add_service_employee">Add Service</string>
    <string name="new_address_employee">New Address</string>
    <string name="new_phone_number_employee">New Phone Number</string>
    <string name="new_clinic_name_employee">New Clinic Name</string>
    <string name="new_accepted_insurance">New Accepted Insurance (separate with commas)</string>
    <string name="new_accepted_payments">New Payment Methods (separate with commas)</string>
    <string name="confirm">Confirm</string>
    <string name="not_completed">NOT COMPLETED</string>
    <string name="clinic_search">CLINIC SEARCH</string>
    <string name="clinic_page">CLINIC PAGE</string>
    <string name="appointments">APPOINTMENTS</string>


</resources>
