<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/editUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#7E24788F"
        android:hint="@string/new_username" />

    <EditText
        android:id="@+id/editUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_email_address"
        android:textColorHint="#7E24788F" />

    <EditText
        android:id="@+id/edit_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColorHint="#7E24788F" />

    <TextView
        android:id="@+id/new_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_new_role"
        android:textColor="#7E24788F"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/editRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/editRoleEmployee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/employee"
            android:textColor="#BE24788F" />

        <RadioButton
            android:id="@+id/editRolePatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/patient"
            android:textColor="#BE24788F" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirmEditUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#5C32B1D1"
            android:textColor="#FC24788F"
            android:text="@string/edit" />


    </LinearLayout>


</LinearLayout>