<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#7E24788F"
        android:hint="@string/new_address_employee" />

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_phone_number_employee"
        android:textColorHint="#7E24788F"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editClinicName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="#7E24788F"
        android:hint="@string/new_clinic_name_employee"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editAcceptedInsurance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_accepted_insurance"
        android:textColorHint="#7E24788F"/>

    <EditText
        android:id="@+id/editAcceptedPaymentMethods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_accepted_payments"
        android:textColorHint="#7E24788F"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirmEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#5C32B1D1"
            android:textColor="#FC24788F"
            android:text="@string/confirm" />


    </LinearLayout>


</LinearLayout>