<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editServiceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#7E24788F"
        android:hint="@string/service_name" />

    <RadioGroup
        android:id="@+id/editRoleService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:orientation="horizontal"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp">

        <RadioButton
            android:id="@+id/doctor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/doctor"
            android:textColor="#BE24788F" />

        <RadioButton
            android:id="@+id/nurse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nurse"
            android:textColor="#BE24788F" />

        <RadioButton
            android:id="@+id/staff"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/staff"
            android:textColor="#BE24788F" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirmEditService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#5C32B1D1"
            android:textColor="#FC24788F"
            android:text="@string/edit" />


    </LinearLayout>


</LinearLayout>