<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageUsersActivity">

    <TextView
        android:id="@+id/Users_Header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="534dp"
        android:background="#5C32B1D1"
        android:bufferType="normal"
        android:clickable="false"
        android:shadowColor="#196A75"
        android:text="@string/manage_users"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="24sp"
        android:textStyle="normal"
        android:typeface="normal"
        app:autoSizeTextType="uniform" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="79dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        app:srcCompat="@mipmap/stethoscope_foreground" />

    <EditText
        android:id="@+id/manage_username"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:layout_marginBottom="460dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textColorHint="#7E24788F"
        android:textCursorDrawable="@color/colorAccent" />


    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="183dp"
        android:layout_toStartOf="@+id/edit"
        android:layout_toLeftOf="@+id/edit"
        android:background="#5C32B1D1"
        android:bufferType="spannable"
        android:text="@string/add"
        android:textColor="#BE24788F" />

    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="176dp"
        android:layout_marginBottom="183dp"
        android:layout_toStartOf="@+id/delete"
        android:layout_toLeftOf="@+id/delete"
        android:background="#5C32B1D1"
        android:text="@string/edit"
        android:textColor="#BE24788F" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="183dp"
        android:background="#5C32B1D1"
        android:text="@string/delete"
        android:textColor="#BE24788F" />

    <EditText
        android:id="@+id/manage_password"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="360dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:textColorHint="#7E24788F"
        android:textCursorDrawable="@color/colorAccent"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/manage_confirm_password"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="310dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="#7E24788F"
        android:textCursorDrawable="@color/colorAccent"
        android:hint="@string/confirm_password"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/radio_group_userrole"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="260dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/manage_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/employee"
            android:textColor="#BE24788F"/>

        <RadioButton
            android:id="@+id/manage_patient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/patient"
            android:textColor="#BE24788F"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="109dp"
        android:text="@string/username_requirement"
        android:textColor="#BE24788F" />

    <EditText
        android:id="@+id/manage_email"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="412dp"
        android:ems="10"
        android:textColorHint="#7E24788F"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address" />

    <Button
        android:id="@+id/ViewUsers"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="50dp"
        android:background="#5C32B1D1"
        android:text="@string/view_users"
        android:textColor="#BE24788F" />

</RelativeLayout>