<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterSuccess">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="113dp"
        android:layout_marginLeft="113dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        app:srcCompat="@mipmap/stethoscope_foreground"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/register_success_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/register_success_message"
        android:textAlignment="center"
        android:textColor="#BE24788F"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="314dp"
        android:background="#5C32B1D1"
        android:textSize="18sp"
        android:textColor="#FC24788F"
        android:text="@string/Login" />

</RelativeLayout>