<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        app:srcCompat="@mipmap/sethoscope_foreground" />

    <TextView
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:background="#5C32B1D1"
        android:bufferType="normal"
        android:clickable="false"
        android:shadowColor="#196A75"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="24sp"
        android:textStyle="normal"
        android:typeface="normal"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/signin_employee_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_message"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-4dp"
        android:layout_marginRight="-4dp"
        android:text="@string/signin_employee_message"
        android:textAlignment="center"
        android:textColor="#BE24788F"
        android:textSize="20sp" />

    <Button
        android:id="@+id/logout"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ManageCalenderEmployeeButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:background="#5C32B1D1"
        android:text="@string/Logout"
        android:textColor="#FC24788F"
        android:textSize="15sp" />

    <Button
        android:id="@+id/ManageServiceEmployee"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ViewProfileEmployee"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#5C32B1D1"
        android:text="@string/manage_service"
        android:textColor="#FC24788F"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/ManageCalenderEmployeeButton"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ManageServiceEmployee"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#5C32B1D1"
        android:text="@string/manage_calender_employee"
        android:textColor="#FC24788F"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/ViewProfileEmployee"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin_employee_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#5C32B1D1"
        android:textColor="#FC24788F"
        android:text="@string/view_profile_employee" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Header"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-3dp"
        android:layout_marginLeft="-3dp"
        android:layout_marginTop="0dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#BE24788F"
        android:textSize="20sp" />

</RelativeLayout>